fix scrollbar component

--- a/assets/css/components/background.css
+++ b/assets/css/components/background.css
@@ -1,19 +1,19 @@
 .bg-osca-one {
-	background: #283756
+	background: #283756;
 }
 
 .bg-osca-two {
-	background: #F7931E
+	background: #F7931E;
 }
 
 .bg-osca-three {
-	background: #F5BC13
+	background: #F5BC13;
 }
 
 .bg-osca-four {
-	background: #F1F2D3
+	background: #F1F2D3;
 }
 
 .bg-osca-five {
-	background: #FFFFFF
+	background: #FFFFFF;
 }
