--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -52,7 +52,7 @@
 
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	background: #000;
+	background: #283756;
 }
 
 html {
